# yolov7_plate

./: .gitignore  README.md  detect.py  detect_rec_plate.py  get_small_pic.py  read_image.py  requirements.txt  test.py  train.py  train.sh
cfg/: yolov7-face.yaml  yolov7-lite-e-plate.yaml  yolov7-lite-s-detect.yaml  yolov7-lite-s.yaml  yolov7-lite-t.yaml  yolov7-tiny-face.yaml  yolov7s-face.yaml
data/: plate.yaml
models/: export.py  yolo.py
ncnn/: ncnn_export.py
onnx/: README.md  yolov7_plate_onnx_infer.py
plate_recognition/: plateNet.py  plate_rec.py
tensorrt/: .gitignore  CMakeLists.txt  README.md  detect_rec_plate.cpp  plate_rec.cpp  utils.cpp
tensorrt/include/: logging.h  utils.hpp
tensorrt/onnx2trt/: CMakeLists.txt  onnx2trt.cpp
tensorrt/onnx_model/: plate_detect.onnx
utils/: datasets.py  general.py  loss.py
weights/: plate_rec.pth  plate_rec_color.pth  yolov7-lite-e.pt  yolov7-lite-s.pt  yolov7-lite-t.pt
